--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "passwordGenerator",
+  "name": "Password Generator",
+  "icon": "./assets/icon.jpg",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +11,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.0",
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-toast-message": "^2.1.10",
     "yup": "^1.3.2"
   },
   "devDependencies": {
